--- a/resources/sass/imports/_buttons.scss
+++ b/resources/sass/imports/_buttons.scss
@@ -1,9 +1,62 @@
+.btn {
+  background-color: $green-brand; 
+  color: white;
+}
 .btn-primary {
-    background-color: $gray !important;
-    padding: 15px 20px !important;
-    border-color: 0px;
+    padding: 15px 20px;
+    border: 0px;
     &:hover {
-        background-color: $green-brand !important;
+        background-color: $gray-brand;
         border-color: 0px !important;
     }
+}
+.btn-hg {
+    position: relative;
+    padding: 13px 20px;
+    font-size: 22px;
+    line-height: 1.227;
+    border-radius: 6px;
+    background-color: $green-brand !important;
+    border: 0px !important;
+    overflow: hidden;
+    @include transition(0.3s ease-in);
+}
+.btn-hg:hover {
+    background-color: transparent !important;
+}
+.btn-hg:before {
+  content: "";
+  position: absolute;
+  background-color: $green-dark;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index:-1;
+  top: 100%;
+  @include transition(top 0.3s ease-in);
+}
+.btn-hg:hover:before {
+  top: 0;
+}
+.btn-embossed {
+    box-shadow: inset 0 -2px 0 rgba(0,0,0,.15);
+}
+.btn-embossed:hover {
+  background-color: $green-dark !important;
+  box-shadow: inset 0 -2px 0 rgba(0,0,0,1);
+}
+.btn-small {
+  padding: 10px 40px 10px 40px;
+  &:hover {
+    background-color: $gray-dark;
+    color: white;
+  }
+}
+.btn-cancel {
+  background-color: $gray-light;
+  color: $gray;
+  &:hover {
+    background-color: $gray-brand;
+    color: white;
+  }
 }
