--- a/resources/sass/imports/_navbar.scss
+++ b/resources/sass/imports/_navbar.scss
@@ -1,5 +1,11 @@
 $navbar-inverse-bg: $green-brand;
 
+.container-fluid {
+    width: 82%;
+    padding: 8px;
+    box-sizing: border-box;
+}
+
 .navbar-inverse {
     background-color: $navbar-inverse-bg !important;
     border-bottom: 0px !important;
