--- a/resources/sass/custom/_custom-swatches.scss
+++ b/resources/sass/custom/_custom-swatches.scss
@@ -16,6 +16,7 @@ $color-info: #3498db;
 $color-warning: #e67e22;
 $color-error: #bc1a3a;
 $color-white: #fdffff;
+$color-black: #2f2f2f;
 
 /* HOVERS */
 $color-error-hover: darken($color-error, $dark);
