--- a/resources/sass/imports.scss
+++ b/resources/sass/imports.scss
@@ -9,3 +9,4 @@
 @import "custom/custom-forms";
 @import "custom/custom-navbar";
 @import "custom/custom-buttons";
+@import "custom/custom-timeline";
