--- a/resources/sass/styles.scss
+++ b/resources/sass/styles.scss
@@ -41,6 +41,10 @@ body {
     color: white !important;
 }
 
+.img-rounded {
+    border-radius: 50%;
+}
+
 /* pretty <pre> code */
 pre {
     font-size: 11px;
