Comments main structure / improved timeline

--- a/resources/sass/custom/_custom-timeline.scss
+++ b/resources/sass/custom/_custom-timeline.scss
@@ -77,7 +77,7 @@ $timeline-radius:                         4px !default;
 		  & .events {
 			  position: relative;
 			  margin-top: 31px;
-			  padding: 10px 10px 0;
+			  padding: 20px;
 			  border-radius: 4px;
 			  background-color: $gray-light;
 			  width: 47%;
@@ -92,13 +92,18 @@ $timeline-radius:                         4px !default;
 				 border-style: solid;
 			  }
 
-			  & .events-object {
-				  margin-right: 10px;
+			  & .status {
+			  	border-bottom: 1px solid $color-white;
+			  }
+
+			  & .horse-avatar {
+				  margin-right: 20px;
 			  }
 
 			  & .events-body {
 				  overflow: hidden;
 				  zoom: 1;
+				  border-bottom: 1px solid $gray-light;
 
 				  & .events-heading {
 					  margin: 0 0 10px;
@@ -184,4 +189,49 @@ $timeline-radius:                         4px !default;
 			}
 		}
 	}
+}
+
+/* COMMENTS */
+.comments {
+	margin-left: 120px;
+}
+
+.subcomments {
+	margin-left: 40px;
+}
+
+.comments p, 
+.subcomments p {
+		line-height: 15px;
+}
+
+.has-subcomments {
+	border-bottom: 1px solid $color-white;
+}
+
+.comment {
+	padding: 10px 10px 10px 0px;
+}
+
+.comment:not(:first-child) {
+	border-top: 1px solid $color-white;
+}
+
+.subcomment {
+	@extend .comment;
+}
+
+.comment-name { 
+	margin: 0px;
+	line-height: 20px;
+	padding-top: 5px;
+	padding-bottom: 5px;
+}
+
+.comment-meta {
+	color: $gray-brand;
+}
+
+.comment-time, .comment-.bullet {
+	color: $gray-brand;
 }
